Modified and added ListResource.java, ListServiceDB.java. And register the new resource (ListResouce) in ToDoListsApplication.run method.